# Tatha

./: .env.example  .gitignore  CHANGELOG.md  README.md  auth.html  demo.html  index.html  pyproject.toml  requirements.txt
config/: extractors_schema.example.json
docs/: API契约_V1.md  MBTI本地资产与适配建议.md  V0演示清单.md  V1_region与订阅页测试.md  V1_阶段7_托管支付开箱用.md  Web页面说明.md  架构_单入口与中央大脑.md  职位匹配_钱多事少离家近.md  设计说明_九库与Tatha.md  量子认证接口约定_V1.md
scripts/: build_poetry_index.py  build_resume_index.py  run_document_evals.py  test_credit_analysis.py  test_improvements.sh  test_job_match_with_resume.py  test_resume_job_company_flow.py  verify_v0_demo.py
src/tatha/: __init__.py
src/tatha/agents/: __init__.py  document_agents.py  mbti_analyzer.py  mbti_career_match.py  schemas.py
src/tatha/ai/: __init__.py  fn_from_schema.py
src/tatha/api/: __init__.py  app.py  auth.py  central_brain.py  orders.py  quota.py  region.py  schemas.py  tier_store.py  webhooks.py
src/tatha/core/: __init__.py  config.py  llm.py  tokens.py
src/tatha/evals/: __init__.py  datasets.py
src/tatha/ingest/: __init__.py  markitdown_convert.py
src/tatha/jobs/: __init__.py  pipeline.py  schemas.py  scoring.py
src/tatha/jobs/sources/: __init__.py  apify_linkedin.py  base.py  mock.py  registry.py
src/tatha/retrieval/: __init__.py  haystack_pipeline.py  llama_index_rag.py
tests/: __init__.py  test_central_brain.py  test_credit.py  test_phase7.py  test_quota.py  test_rag_query.py  test_region_api.py  test_region_ip.py
tests/e2e/: conftest.py  test_auth_and_demo.py  test_subscription_region.py
